--- a/components/article-nav.ejs
+++ b/components/article-nav.ejs
@@ -1,10 +1,10 @@
 <div class="article-nav-wrap bg-red_200 py-3">
   <div class="article-nav container">
-    <nav>
-      <a href="#" class="fz-20 text-white mr-12">最新消息</a>
-      <a href="#" class="fz-20 text-white mr-12">特別企劃</a>
-      <a href="#" class="fz-20 text-white mr-12">新品上市</a>
-      <a href="#" class="fz-20 text-white">鏡框小知識</a>
+    <nav class="fw-bold fz-20">
+      <a href="#" class="text-white mr-12">最新消息</a>
+      <a href="#" class="text-white mr-12">特別企劃</a>
+      <a href="#" class="text-white mr-12">新品上市</a>
+      <a href="#" class="text-white">鏡框小知識</a>
     </nav>
     <button class="search-btn px-0" type="button"><span class="material-icons-outlined fz-30 text-white">search</span></button>
   </div>
