修正圖片路徑

--- a/components/locations-list.ejs
+++ b/components/locations-list.ejs
@@ -17,7 +17,7 @@
           <span><%= location.address -%></span>
         </p>
       </div>
-      <a href="/week3-4/pages/location.html" class="location-detail-link fz-20 bg-black text-white py-4">詳細資訊</a>
+      <a href="/week3-4/location.html" class="location-detail-link fz-20 bg-black text-white py-4">詳細資訊</a>
     </li>
   <% }) %>
 </ul>
