--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -3,16 +3,16 @@
     <div class="footer-header pb-8 mb-8">
       <div class="footer-nav-container mb-6">
         <nav class="footer-nav">
-          <a href="/week3-4/pages/index.html" class="text-white mr-12">首頁</a>
-          <a href="/week3-4/pages/products/optical.html" class="text-white mr-12">系列鏡框</a>
-          <a href="/week3-4/pages/locations.html" class="text-white mr-12">門市據點</a>
-          <a href="/week3-4/pages/blog.html" class="text-white mr-12">部落格</a>
-          <a href="/week3-4/pages/questions.html" class="text-white">常見問題</a>
+          <a href="/week3-4/index.html" class="text-white mr-12">首頁</a>
+          <a href="/week3-4/products/optical.html" class="text-white mr-12">系列鏡框</a>
+          <a href="/week3-4/locations.html" class="text-white mr-12">門市據點</a>
+          <a href="/week3-4/blog.html" class="text-white mr-12">部落格</a>
+          <a href="/week3-4/questions.html" class="text-white">常見問題</a>
         </nav>
         <ul class="icons-list">
-          <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic-social-fb.png" alt="facebook"></a></li>
-          <li class="icon-item mr-8"><a href="#"><img class="icon" src="../../assets/images/ic_social_ig.png" alt="instagram"></a></li>
-          <li class="icon-item"><a href="#"><img class="icon" src="../../assets/images/ic_social_line.png" alt="line"></a></li>
+          <li class="icon-item mr-8"><a href="#"><img class="icon" src="/assets/images/ic-social-fb.png" alt="facebook"></a></li>
+          <li class="icon-item mr-8"><a href="#"><img class="icon" src="/assets/images/ic_social_ig.png" alt="instagram"></a></li>
+          <li class="icon-item"><a href="#"><img class="icon" src="/assets/images/ic_social_line.png" alt="line"></a></li>
         </ul>
       </div>
       <address class="footer-main fz-36">
