--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,13 +1,13 @@
 <header class="header bg-primary py-4">
   <div class="header-container container">
-    <a class="logo-link" href="/week3-4/pages/index.html">
-      <img class="logo" src="../../assets/images/logo-white.png" alt="logo">
+    <a class="logo-link" href="/week3-4/index.html">
+      <img class="logo" src="/assets/images/logo-white.png" alt="logo">
     </a>
     <nav class="header-nav">
-      <a href="/week3-4/pages/products/optical.html" class="text-white fz-20 mr-16">系列鏡框</a>
-      <a href="/week3-4/pages/locations.html" class="text-white fz-20 mr-16">門市據點</a>
-      <a href="/week3-4/pages/blog.html" class="text-white fz-20 mr-16">部落格</a>
-      <a href="/week3-4/pages/questions.html" class="text-white fz-20">常見問題</a>
+      <a href="/week3-4/products/optical.html" class="text-white fz-20 mr-16">系列鏡框</a>
+      <a href="/week3-4/locations.html" class="text-white fz-20 mr-16">門市據點</a>
+      <a href="/week3-4/blog.html" class="text-white fz-20 mr-16">部落格</a>
+      <a href="/week3-4/questions.html" class="text-white fz-20">常見問題</a>
     </nav>
   </div>
 </header>
